Fixed contrast issue bug

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ main {
 }
 
 .section-description {
-  color: #7d889e;
+  color: #3b414f;
   font-weight: 400;
   font-size: 1.5rem;
   text-align: center;
